PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 7.0.1

- Core:
  . Fixed bug #70970 (Segfault when combining error handler with output
	buffering). (Laruence)
  . Fixed bug #70958 (Invalid opcode while using ::class as trait method
    paramater default value). (Laruence)
  . Fixed bug #70944 (try{ } finally{} can create infinite chains of
    exceptions). (Laruence)
  . Fixed bug #70899 (buildconf failure in extensions). (Bob, Reeze)
  . Fixed bug #61751 (SAPI build problem on AIX: Undefined symbol:
    php_register_internal_extensions). (Lior Kaplan)
  . Fixed \int (or generally every scalar type name with leading backslash)
    to not be accepted as type name. (Bob)
  . Fixed bug #70904 (yield from incorrectly marks valid generator as finished).
    (Bob)
  . Fixed exception not being thrown immediately into a generator yielding
    from an array. (Bob)

- Mysqlnd:
  . Fixed bug #70949 (SQL Result Sets With NULL Can Cause Fatal Memory Errors).
    (Laruence)
  . Fixed bug #68077 (LOAD DATA LOCAL INFILE / open_basedir restriction).
    (Laruence)

- OCI8:
  . Fixed LOB implementation size_t/zend_long mismatch reported
    by gcov. (Senthil)

- Opcache:
  . Fixed bug #70977 (Segmentation fault with opcache.huge_code_pages=1).
    (Laruence)

- Phpdbg:
  . Fixed stderr being written to stdout. (Bob)

- Reflection:
  . Fixed bug #70982 (setStaticPropertyValue behaviors inconsistently with
    5.6). (Laruence)

- Standard:
  . Fixed bug #70960 (ReflectionFunction for array_unique returns wrong number
    of parameters). (Laruence)

- Streams/Socket
  . Add IPV6_V6ONLY constant / make it usable in stream contexts. (Bob)

26 Nov 2015, PHP 7.0.0 RC 8

- Core:
  . Fixed bug #70947 (INI parser segfault with INI_SCANNER_TYPED). (Laruence)
  . Fixed bug #70914 (zend_throw_or_error() format string vulnerability).
    (Taoguang Chen)