@@ -19,4 +19,4 @@ test(new CachingIterator($ar, 0));
 ===DONE===
 --EXPECTF--	
 
-Fatal error: Method CachingIterator::__toString() must not throw an exception in %siterator_036.php on line %d
+Fatal error: Method CachingIterator::__toString() must not throw an exception, caught BadMethodCallException: CachingIterator does not fetch string value (see CachingIterator::__construct) in %siterator_036.php on line %d
